feat(bot): api bot tokens implemented
